--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ footer {
   </p>
 
   <div class="socials">
-    <a href="https://github.com/waruniamanthi7-stack" target="_blank"><i class="fab fa-github"></i></a>
+    <a href="https://github.com/waruni-amanthi" target="_blank"><i class="fab fa-github"></i></a>
     <a href="#"><i class="fab fa-linkedin"></i></a>
   </div>
 
